--- a/angular/frontend/src/app/login/login.component.html
+++ b/angular/frontend/src/app/login/login.component.html
@@ -66,8 +66,8 @@
       <hr class="thin-br"/>
       <br />
       <div class="container logo">
-        <h1>Tutor's</h1>
-        <h1>Assistant</h1>
+        <h1>Task</h1>
+        <h1>Master</h1>
       </div>
       <br />
       <hr class="thin-br"/>
