Fixed css styling in headers/footers to make color scheme consistent with app theme -- angular/frontend

--- a/angular/frontend/src/app/authenticated-user/authenticated-layout/authenticated-footer/authenticated-footer.component.html
+++ b/angular/frontend/src/app/authenticated-user/authenticated-layout/authenticated-footer/authenticated-footer.component.html
@@ -9,7 +9,7 @@
           <!--Grid row-->
           <div class="row">
             <!-- Grid column -->
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 app-info">
               <h6 class="text-uppercase mb-4 font-weight-bold text-center">
                 Tutor's Assistant
               </h6>
