--- a/angular/frontend/src/app/unauthenticated-layout/unauthenticated-footer/unauthenticated-footer.component.html
+++ b/angular/frontend/src/app/unauthenticated-layout/unauthenticated-footer/unauthenticated-footer.component.html
@@ -9,7 +9,7 @@
           <!--Grid row-->
           <div class="row">
             <!-- Grid column -->
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 app-info">
               <h6 class="text-uppercase mb-4 font-weight-bold">
                 Tutor's Assistant
               </h6>
@@ -21,7 +21,7 @@
   
             <!-- Grid column -->
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Tutor's Assistant</h6>
+              <h6 class="text-uppercase mb-4 font-weight-bold app-info">Tutor's Assistant</h6>
               <!--<p>
                 <a routerLink="/info" routerLinkActive>Information</a>
               </p>
