Debugging of weekly task schedulers and weekly task applied quarterly -- including issue in typescript with sending empty post (needed to send an empty object) for confirming tasks, issue with user being in the serializer to submit weekly task schedulers and that preventing sucessful posts, and issues with capitalization of task status and wrong path in navbar to go to the landing page -- angular/frontend & django/backend

--- a/angular/frontend/src/app/authenticated-user/landing/uncompleted-tasks/uncompleted-tasks.component.html
+++ b/angular/frontend/src/app/authenticated-user/landing/uncompleted-tasks/uncompleted-tasks.component.html
@@ -33,7 +33,7 @@
               <p (click)="onConfirmTaskCompletionAndRemove(task.id)" 
                 class="confirm-style" id="confirm"
               >
-                {{task.status}}
+                {{ task.status.charAt(0).toUpperCase() + task.status.slice(1) }}
               </p>
             </th>
           </tr>
