--- a/angular/frontend/src/app/authenticated-user/tasks/single/list/daily-list/daily-list.component.html
+++ b/angular/frontend/src/app/authenticated-user/tasks/single/list/daily-list/daily-list.component.html
@@ -78,11 +78,11 @@
                 <p (click)="onConfirmTaskCompletion(task.id)" 
                   class="confirm-style" id="confirm-link"
                 >
-                  {{task.status}}
+                  {{ task.status.charAt(0).toUpperCase() + task.status.slice(1) }}
                 </p>
               </th>
               <th *ngIf="task.status === 'COMPLETED'" class="col">
-                <p>{{ task.status }}</p>
+                <p>{{ task.status.charAt(0).toUpperCase() + task.status.slice(1) }}</p>
               </th>
             </tr>
           </tbody>
