--- a/angular/frontend/src/app/authenticated-user/tasks/weekly/create/create-weekly-task-form/create-weekly-task-form.component.html
+++ b/angular/frontend/src/app/authenticated-user/tasks/weekly/create/create-weekly-task-form/create-weekly-task-form.component.html
@@ -9,10 +9,13 @@
         required
         #dayOfWeek="ngModel"
         >
-        <option *ngFor="let dayOfWeek of daysOfWeek"
-            [ngValue]=dayOfWeek
-        >{{ dayOfWeek }}
-        </option>
+        <option [value]=0>Monday</option>
+        <option [value]=1>Tuesday</option>
+        <option [value]=2>Wednesday</option>
+        <option [value]=3>Thursday</option>
+        <option [value]=4>Friday</option>
+        <option [value]=5>Saturday</option>
+        <option [value]=6>Sunday</option>
         </select>
         <div *ngIf="dayOfWeek.touched && dayOfWeek.invalid">
           Please select a day of the week.
