--- a/angular/frontend/src/app/authenticated-user/tasks/weekly/list/weekly-task/weekly-task.component.html
+++ b/angular/frontend/src/app/authenticated-user/tasks/weekly/list/weekly-task/weekly-task.component.html
@@ -1,7 +1,7 @@
 <tr class="row" >
     <th class="col">
         <h5>
-            {{ weeklyTaskScheduler.day_of_week }}
+            {{ weeklyTaskScheduler.day_of_week_string }}
         </h5>
     </th>
     <th class="col">
