--- a/angular/frontend/src/app/authenticated-user/authenticated-layout/authenticated-header/authenticated-header.component.html
+++ b/angular/frontend/src/app/authenticated-user/authenticated-layout/authenticated-header/authenticated-header.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand mydropnav hidden-small-and-medium" 
-        routerLink="/authenticated-user/scheduling/landing" 
+        routerLink="/authenticated-user/landing" 
         routerLinkActive
       >
-        Tutor's Assistant
+        Task Master
       </a>
       <button class="navbar-toggler" type="button" 
         data-bs-toggle="collapse" 
@@ -19,7 +19,7 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li>
             <a class="nav-link small-and-med-scr" 
-              routerLink="/authenticated-user/scheduling/landing" 
+              routerLink="/authenticated-user/landing" 
               routerLinkActive
             >Home
             </a>
@@ -45,191 +45,27 @@
             </ul>
           </li>
 
-          <li class="nav-item dropdown small-and-med-scr">
+          <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle mydropnav"
               href="#" id="navbarDropdown" role="button" 
               data-bs-toggle="dropdown" aria-expanded="false"
             >
-              Students/Classes
+              Weekly
             </a>
-            <ul class="dropdown-menu mydropnav bg-dark" 
-              aria-labelledby="navbarDropdown">
-              <li>
-                <a class="dropdown-item bg-dark link-style"
-                  [routerLink]="['create-student-or-class']">Create New
-                </a>
+            <ul class="dropdown-menu mydropnav bg-dark" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item bg-dark link-style" 
+                routerLink="/authenticated-user/weekly/create" routerLinkActive 
+                >Create</a>
               </li>
-              <li>
-                <a class="dropdown-item bg-dark link-style"
-                  [routerLink]="['users-students-or-classes']">View List
-                </a>
-              </li>
-            </ul>
-          </li> 
-
-          <li class="nav-item dropdown hidden-small-and-medium">
-            <a class="nav-link dropdown-toggle mydropnav"
-               href="#" id="clientsDropdown" role="button"
-               data-bs-toggle="dropdown" aria-expanded="false">
-              Clients
-            </a>
-            <ul class="dropdown-menu bg-dark" aria-labelledby="clientsDropdown">
-              <!-- Nested dropdown: Schools/Companies -->
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle bg-dark text-white" href="#">
-                  Schools/Companies
-                </a>
-                <ul class="dropdown-menu bg-dark">
-                  <li>
-                    <a class="dropdown-item bg-dark text-white"
-                       [routerLink]="['create-school']">Create School</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item bg-dark text-white"
-                       [routerLink]="['users-schools']">View Schools</a>
-                  </li>
-                </ul>
-              </li>
-          
-              <!-- Nested dropdown: Students/Classes -->
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle bg-dark text-white" href="#">
-                  Students/Classes
-                </a>
-                <ul class="dropdown-menu bg-dark">
-                  <li>
-                    <a class="dropdown-item bg-dark text-white"
-                       [routerLink]="['create-student-or-class']">Create Class</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item bg-dark text-white"
-                       [routerLink]="['users-students-or-classes']">View Classes</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-
-          <li class="nav-item dropdown small-and-med-scr">
-            <a class="nav-link dropdown-toggle mydropnav"
-              href="#" id="navbarDropdown" role="button" 
-              data-bs-toggle="dropdown" aria-expanded="false"
-            >
-              Accounting/Finance
-            </a>
-            <ul class="dropdown-menu mydropnav bg-dark" 
-              aria-labelledby="navbarDropdown">
-              <li>
-                <a class="dropdown-item bg-dark link-style" 
-                  routerLink="/authenticated-user/scheduling/accounting/select-month-year-and-school" routerLinkActive 
-                >
-                  Monthly Earnings
-                </a>
+              <li><a class="dropdown-item bg-dark link-style" 
+                routerLink="/authenticated-user/weekly/list" routerLinkActive 
+                >List</a>
               </li>
               <li>
                 <a class="dropdown-item bg-dark link-style" 
-                  routerLink="/authenticated-user/scheduling/accounting/select-date-range-and-school" routerLinkActive 
-                >
-                  Earnings in Date Range
+                  routerLink="/authenticated-user/weekly/select-quarterly" routerLinkActive 
+                >Quarterly
                 </a>
-              </li>
-              <li>
-                <a class="dropdown-item bg-dark link-style" 
-                  routerLink="/authenticated-user/scheduling/accounting/select-month-year-and-freelance-account" routerLinkActive 
-                >
-                  Freelance Account Activity
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item bg-dark link-style" 
-                  routerLink="/authenticated-user/scheduling/accounting/select-month-and-year-for-freelance-payments-refunds-records" routerLinkActive 
-                >
-                  Freelance Transactions Records
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item bg-dark link-style" 
-                  routerLink="/authenticated-user/scheduling/accounting/make-purchase" routerLinkActive 
-                >
-                  Freelance Hours Purchase
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item bg-dark link-style" 
-                  routerLink="/authenticated-user/scheduling/accounting/make-refund" routerLinkActive 
-                >
-                  Freelance Hours Refund
-                </a>
-              </li>
-            </ul>
-          </li> 
-
-          <li class="nav-item dropdown hidden-small-and-medium">
-            <a class="nav-link dropdown-toggle mydropnav"
-               href="#" id="clientsDropdown" role="button"
-               data-bs-toggle="dropdown" aria-expanded="false">
-               Accounting
-            </a>
-            <ul class="dropdown-menu bg-dark" aria-labelledby="clientsDropdown">
-              <!-- Nested dropdown: Schools/Companies -->
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle bg-dark text-white" href="#">
-                  Estimated Earnings
-                </a>
-                <ul class="dropdown-menu bg-dark">
-                  <li>
-                    <a class="dropdown-item bg-dark link-style" 
-                      routerLink="/authenticated-user/scheduling/accounting/select-month-year-and-school" routerLinkActive 
-                      >
-                      Monthly Report
-                    </a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item bg-dark link-style" 
-                      routerLink="/authenticated-user/scheduling/accounting/select-date-range-and-school" routerLinkActive 
-                      >
-                      Report in Date Range
-                    </a>
-                  </li>
-                  <li>
-                </ul>
-              </li>
-          
-              <!-- Nested dropdown: Students/Classes -->
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle bg-dark text-white" href="#">
-                  Freelance
-                </a>
-                <ul class="dropdown-menu bg-dark">
-                  <li>
-                    <a class="dropdown-item bg-dark link-style" 
-                      routerLink="/authenticated-user/scheduling/accounting/select-month-year-and-freelance-account" routerLinkActive 
-                      >
-                      Account Activity
-                    </a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item bg-dark link-style" 
-                      routerLink="/authenticated-user/scheduling/accounting/select-month-and-year-for-freelance-payments-refunds-records" routerLinkActive 
-                      >
-                      Transactions Records
-                    </a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item bg-dark link-style" 
-                      routerLink="/authenticated-user/scheduling/accounting/make-purchase" routerLinkActive 
-                      >
-                      Purchase Hours
-                    </a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item bg-dark link-style" 
-                      routerLink="/authenticated-user/scheduling/accounting/make-refund" routerLinkActive 
-                      >
-                      Refund Hours
-                    </a>
-                  </li>
-                </ul>
               </li>
             </ul>
           </li>
