--- a/angular/frontend/src/app/authenticated-user/landing/landing-page-user/landing-page-user.component.html
+++ b/angular/frontend/src/app/authenticated-user/landing/landing-page-user/landing-page-user.component.html
@@ -63,11 +63,11 @@
             <p (click)="onConfirmTaskCompletion(task.id)" 
               class="confirm-style" id="confirmation"
             >
-              {{task.status}}
+              {{ task.status.charAt(0).toUpperCase() + task.status.slice(1) }}
             </p>
           </th>
           <th *ngIf="task.status === 'COMPLETED'" class="col">
-            <p>{{ task.status }}</p>
+            <p>{{ task.status.charAt(0).toUpperCase() + task.status.slice(1) }}</p>
           </th>
         </tr>
       </tbody>
