--- a/angular/frontend/src/app/authenticated-user/tasks/single/detail/task-detail/task-detail.component.html
+++ b/angular/frontend/src/app/authenticated-user/tasks/single/detail/task-detail/task-detail.component.html
@@ -47,7 +47,9 @@
                             <td>{{ singleTask.date }}</td>
                             <td> {{ singleTask.task_name }}</td>
                             <td>{{ singleTask.comments }}</td>
-                            <td>{{ singleTask.status }}</td>
+                            <td>
+                              {{ singleTask.status.charAt(0).toUpperCase() + singleTask.status.slice(1) }}
+                            </td>
                           </tr>
                         </tbody>
                     </table>
