Debugged inconsistent and redundant fields in django serializers for monthly tasks and added frontend module adapted from previous Spring Boot version and debugged for inconsistent model fields and url endpoints. Brought over testing mock data from previous app version, which will also need to be debugged and modified for angular ngrx and services -- angular/frontend & django/backend

--- a/angular/frontend/src/app/authenticated-user/authenticated-layout/authenticated-header/authenticated-header.component.html
+++ b/angular/frontend/src/app/authenticated-user/authenticated-layout/authenticated-header/authenticated-header.component.html
@@ -75,42 +75,25 @@
               href="#" id="navbarDropdown" role="button" 
               data-bs-toggle="dropdown" aria-expanded="false"
             >
-              Scheduling
+              Monthly
             </a>
-            <ul class="dropdown-menu mydropnav bg-dark" 
-              aria-labelledby="navbarDropdown">
-              <li>
-                <a class="dropdown-item bg-dark link-style" 
-                  routerLink="/authenticated-user/scheduling/calendar" routerLinkActive >
-                  Calendar
-                </a>
+            <ul class="dropdown-menu mydropnav bg-dark" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item bg-dark link-style" 
+                routerLink="/authenticated-user/monthly/create" routerLinkActive 
+                >Create</a>
+              </li>
+              <li><a class="dropdown-item bg-dark link-style" 
+                routerLink="/authenticated-user/monthly/list" routerLinkActive 
+                >List</a>
               </li>
               <li>
                 <a class="dropdown-item bg-dark link-style" 
-                  routerLink="/authenticated-user/scheduling/schedule-single-class" routerLinkActive 
-                  >Single Class
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item bg-dark link-style" 
-                  routerLink="/authenticated-user/scheduling/recurring-schedule/create" routerLinkActive 
-                  >Recurring Class
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item bg-dark link-style" 
-                  routerLink="/authenticated-user/scheduling/recurring-schedule/list" routerLinkActive 
-                  >Recurring List
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item bg-dark link-style" 
-                  routerLink="/authenticated-user/scheduling/recurring-schedule/select-month-year" routerLinkActive 
-                  >Monthly Booking
+                  routerLink="/authenticated-user/monthly/select-quarterly" routerLinkActive 
+                >Quarterly
                 </a>
               </li>
             </ul>
-          </li> 
+          </li>
 
           <li><a class="nav-link" 
             [routerLink]="['user-profile']">Profile</a>
