--- a/angular/frontend/src/app/authenticated-user/tasks/interval/applied-quarterly/apply-interval-task-group-form/apply-interval-task-group-form.component.html
+++ b/angular/frontend/src/app/authenticated-user/tasks/interval/applied-quarterly/apply-interval-task-group-form/apply-interval-task-group-form.component.html
@@ -28,7 +28,7 @@
       >
       <option *ngFor="let intervalTaskGroup of intervalTaskGroups"
           [value]=intervalTaskGroup.id
-      >{{ intervalTaskGroup.templateSelectorString }}
+      >{{ intervalTaskGroup.template_selector_string }}
       </option>
       </select>
       <div *ngIf="intervalTaskGroup.touched && intervalTaskGroup.invalid">
