--- a/angular/frontend/src/app/authenticated-user/tasks/interval/applied-quarterly/interval-task-group-applied-quarterly/interval-task-group-applied-quarterly.component.html
+++ b/angular/frontend/src/app/authenticated-user/tasks/interval/applied-quarterly/interval-task-group-applied-quarterly/interval-task-group-applied-quarterly.component.html
@@ -2,7 +2,7 @@
     <th class="col">
       <h5>
         <app-interval-task-group-template-string
-          [intervalTaskGroupId]=intervalTaskGroupAppliedQuarterly.intervalTaskGroupId>
+          [intervalTaskGroupId]=intervalTaskGroupAppliedQuarterly.interval_task_group>
         </app-interval-task-group-template-string>
       </h5>
     </th>
