--- a/angular/frontend/src/app/authenticated-user/tasks/interval/detail/interval-task/interval-task.component.html
+++ b/angular/frontend/src/app/authenticated-user/tasks/interval/detail/interval-task/interval-task.component.html
@@ -1,7 +1,7 @@
 <tr class="row" >
     <th class="col">
       <h5>
-        {{ intervalTask.intervalTaskName }}
+        {{ intervalTask.interval_task_name }}
       </h5>
     </th>
     <th class="col">
