--- a/angular/frontend/src/app/authenticated-user/tasks/interval/interval-task-group-template-string/interval-task-group-template-string.component.html
+++ b/angular/frontend/src/app/authenticated-user/tasks/interval/interval-task-group-template-string/interval-task-group-template-string.component.html
@@ -1,4 +1,4 @@
 <div *ngIf="intervalTaskGroup$ | async as intervalTaskGroup">
-   Group: {{ intervalTaskGroup.templateSelectorString }}
+   Group: {{ intervalTaskGroup.template_selector_string }}
 </div>
 
