--- a/angular/frontend/src/app/authenticated-user/tasks/interval/list/interval-task-group/interval-task-group.component.html
+++ b/angular/frontend/src/app/authenticated-user/tasks/interval/list/interval-task-group/interval-task-group.component.html
@@ -2,13 +2,13 @@
     <th class="col">
         <h5>
           <a [routerLink]="['/authenticated-user/interval/detail', intervalTaskGroup.id]">
-            {{ intervalTaskGroup.taskGroupName }}
+            {{ intervalTaskGroup.task_group_name }}
           </a>
         </h5>
     </th>
     <th class="col">
       <h5>
-        {{ intervalTaskGroup.intervalInDays }}
+        {{ intervalTaskGroup.interval_in_days }}
       </h5>
     </th>
     <th class="col">
