--- a/angular/frontend/src/app/authenticated-user/tasks/interval/detail/interval-task-group-detail/interval-task-group-detail.component.html
+++ b/angular/frontend/src/app/authenticated-user/tasks/interval/detail/interval-task-group-detail/interval-task-group-detail.component.html
@@ -22,7 +22,7 @@
       <button class="btn btn-sm btn-dark" type="button"
         (click)="toggleIntervalTaskSubmitForm()">
         {{ showIntervalTaskSubmitForm ? "Never Mind, I'll submit one next time for "
-        : "Click Here to add a task to the group " }} {{ iTG.taskGroupName }}
+        : "Click Here to add a task to the group " }} {{ iTG.task_group_name }}
       </button>
       <br />
     </div>
@@ -40,7 +40,7 @@
     <div class="mt-3 p-2 rounded">
         <div>
             <div class="container text-center">
-                <h1>{{ iTG.taskGroupName }}: Every {{ iTG.intervalInDays }} Days</h1>
+                <h1>{{ iTG.task_group_name }}: Every {{ iTG.interval_in_days }} Days</h1>
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
@@ -50,7 +50,7 @@
                           </tr>
                         </thead>
                         <tbody>
-                            <div *ngFor="let intervalTask of iTG.intervalTasks">
+                            <div *ngFor="let intervalTask of iTG.interval_tasks">
                                 <app-interval-task 
                                     [intervalTask]=intervalTask 
                                     [taskGroupId]="iTG.id">
